<resources>
    <string name="app_name">CatChow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Hello, User!</string>
    <string name="greeting2">Where would you like to eat?</string>
    <string name="menu_logo_description">restaurant logo</string>
    <string name="CurrFoodImage">current food image</string>
    <string name="CurrFoodPrice">₱ 182.00</string>
    <string name="DesignImageDescription">design image</string>
    <string name="CurrFoodName">1pc Chicken McDo with McSpaghetti</string>
    <string name="cash">Cash</string>
    <string name="gcash">GCash</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_items">Add Items</string>
    <string name="address">Address</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="change">Change</string>
    <string name="todo">TODO</string>
    <string name="delivery_fee">Delivery Fee:</string>
</resources>