<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/top_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:src="@drawable/profile_icon" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="16dp"
            android:background="@drawable/search_view_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/location"
            app:layout_constraintBottom_toBottomOf="@id/exactLocation"
            app:layout_constraintStart_toStartOf="@+id/topView"
            app:layout_constraintTop_toTopOf="@+id/pinLocation" />

        <TextView
            android:id="@+id/pinLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Taft Avenue"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/topView" />

        <TextView
            android:id="@+id/exactLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="One Archers Place Taft Avenue, Malate, Manila"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/pinLocation" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/note_background"
            android:hint="Note"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/change"
            app:layout_constraintStart_toStartOf="@+id/exactLocation"
            app:layout_constraintTop_toBottomOf="@+id/exactLocation" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/clock"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/deliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Delivery Time: Standard (20 mins)"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/clock"
            app:layout_constraintStart_toEndOf="@+id/clock"
            app:layout_constraintTop_toTopOf="@+id/clock" />

        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Order Summary"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/topView"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <TextView
            android:id="@+id/addItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_items"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/topView"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/deliveryTime"
            app:layout_constraintEnd_toEndOf="@+id/addItems"
            app:layout_constraintTop_toTopOf="@+id/deliveryTime" />

        <View
            android:id="@+id/midView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="@drawable/search_view_background"
            app:layout_constraintEnd_toEndOf="@+id/addItems"
            app:layout_constraintStart_toStartOf="@+id/orderSummary"
            app:layout_constraintTop_toBottomOf="@+id/orderSummary" />

        <TextView
            android:id="@+id/quantity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/quantity_background"
            android:paddingHorizontal="4dp"
            android:text="1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/midView"
            app:layout_constraintTop_toTopOf="@+id/midView" />

        <TextView
            android:id="@+id/itemName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Vanilla Milkshake"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/quantity1"
            app:layout_constraintTop_toTopOf="@+id/quantity1" />

        <TextView
            android:id="@+id/itemPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₱250.00"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/addItems"
            app:layout_constraintTop_toTopOf="@+id/itemName1" />

        <TextView
            android:id="@+id/itemDetails1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large"
            android:textColor="@color/hard_text"
            app:layout_constraintStart_toStartOf="@+id/itemName1"
            app:layout_constraintTop_toBottomOf="@+id/itemName1" />

        <TextView
            android:id="@+id/itemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@+id/itemName2"
            app:layout_constraintTop_toBottomOf="@+id/itemName2" />

        <TextView
            android:id="@+id/quantity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/quantity_background"
            android:paddingHorizontal="4dp"
            android:text="1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/quantity1"
            app:layout_constraintTop_toBottomOf="@+id/editItemDetails1" />

        <TextView
            android:id="@+id/itemName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Spinach Pizza"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/quantity2"
            app:layout_constraintTop_toTopOf="@+id/quantity2" />

        <TextView
            android:id="@+id/itemPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₱265.00"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/itemPrice1"
            app:layout_constraintTop_toTopOf="@+id/itemName2" />

        <TextView
            android:id="@+id/editItemDetails1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@+id/itemDetails1"
            app:layout_constraintTop_toBottomOf="@+id/itemDetails1" />

        <TextView
            android:id="@+id/subTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Subtotal: "
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/quantity2"
            app:layout_constraintTop_toBottomOf="@+id/itemDetails" />

        <TextView
            android:id="@+id/subTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₱515.00"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/itemPrice2"
            app:layout_constraintTop_toTopOf="@+id/subTotal" />

        <TextView
            android:id="@+id/deliveryFeeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₱40.00"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/subTotalAmount"
            app:layout_constraintTop_toBottomOf="@+id/subTotalAmount" />

        <TextView
            android:id="@+id/deliveryFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_fee"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/subTotal"
            app:layout_constraintTop_toBottomOf="@+id/subTotal" />

        <TextView
            android:id="@+id/PaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/payment_method"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/midView"
            app:layout_constraintTop_toBottomOf="@+id/midView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/PaymentMethod"
            app:layout_constraintTop_toBottomOf="@+id/PaymentMethod">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gcash" />

        </RadioGroup>

        <View
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/view_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total:"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/bottomView" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₱555.00"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@id/button"
            app:layout_constraintTop_toTopOf="@+id/bottomView" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/place_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
